tests/baselines/reference/privateIndexer2.errors.txt
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts(4,15): error TS1005: ']' expected.
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts(4,17): error TS2304: Cannot find name 'string'.
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts(4,23): error TS1005: ',' expected.
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts(4,24): error TS1136: Property assignment expected.
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts(4,32): error TS1005: ':' expected.
tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts(5,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/classes/indexMemberDeclarations/privateIndexer2.ts (6 errors) ====
    // private indexers not allowed
    
    var x = {
        private [x: string]: string;
                  ~
!!! error TS1005: ']' expected.
                    ~~~~~~
!!! error TS2304: Cannot find name 'string'.
                          ~
!!! error TS1005: ',' expected.
                           ~
!!! error TS1136: Property assignment expected.
                                   ~
!!! error TS1005: ':' expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    var y: {
        private[x: string]: string;
    }